--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "firebase-admin": "^7.2.0",
     "node-fetch": "^2.3.0",
     "request": "^2.88.0"
   }
